--- a/calculator_app/pubspec.yaml
+++ b/calculator_app/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   
   # Typography
   google_fonts: ^6.2.1
+  
+  # Internationalization
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
