feat: Update configure json file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,23 @@
     "configurations": [
         {
             "name": "calculator_app",
-            "cwd": "calculator_app",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "program": "lib/main.dart"
+        },
+        {
+            "name": "calculator_app (profile mode)",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "profile",
+            "program": "lib/main.dart"
+        },
+        {
+            "name": "calculator_app (release mode)",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "release",
+            "program": "lib/main.dart"
         }
     ]
 }
