fix: Update yml file

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -39,14 +39,35 @@ jobs:
       - name: Download SonarScanner
         uses: warchant/setup-sonar-scanner@v7
 
+      - name: Validate SonarQube Configuration
+        run: |
+          if [ -z "${{ secrets.SONAR_HOST_URL }}" ] || [ -z "${{ secrets.SONAR_TOKEN }}" ]; then
+            echo "::error::SonarQube secrets are not configured!"
+            echo "Please add the following secrets to your GitHub repository:"
+            echo "  - SONAR_HOST_URL (e.g., https://sonarcloud.io for SonarCloud)"
+            echo "  - SONAR_TOKEN (your authentication token)"
+            echo "  - SONAR_ORGANIZATION (optional, your SonarCloud organization key)"
+            echo ""
+            echo "For SonarCloud:"
+            echo "  1. Go to https://sonarcloud.io"
+            echo "  2. Sign in with GitHub"
+            echo "  3. Generate a token: Account → Security → Generate Token"
+            echo "  4. Add secrets in GitHub: Settings → Secrets and variables → Actions"
+            exit 1
+          fi
+          echo "✓ SonarQube configuration validated"
+
       - name: SonarQube Scan
         env:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_ORGANIZATION: ${{ secrets.SONAR_ORGANIZATION }}
         run: |
-          sonar-scanner \
-            -Dsonar.host.url=${SONAR_HOST_URL} \
-            -Dsonar.login=${SONAR_TOKEN}
+          SCANNER_ARGS="-Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=${SONAR_TOKEN} -Dsonar.projectKey=calculator_app"
+          if [ -n "${SONAR_ORGANIZATION}" ]; then
+            SCANNER_ARGS="${SCANNER_ARGS} -Dsonar.organization=${SONAR_ORGANIZATION}"
+          fi
+          sonar-scanner ${SCANNER_ARGS}
 
       - name: Wait for Quality Gate
         env:
