--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,22 @@
+# Project identification
 sonar.projectKey=calculator_app
 sonar.projectName=calculator_app
-sonar.sources=lib
-sonar.tests=test
 sonar.projectVersion=1.0
-sonar.language=dart
+
+# Source code location
+sonar.sources=lib,pubspec.yaml
+sonar.tests=test
+
+# Encoding of the source code
 sonar.sourceEncoding=UTF-8
+
+# Language
+sonar.language=dart
+
+# Exclusions
 sonar.exclusions=**/*.g.dart,**/*.freezed.dart
 sonar.coverage.exclusions=**/*.g.dart,**/*.freezed.dart
+
 # For community Flutter plugin
 sonar.flutter.projectType=flutter
 sonar.dart.lcov.reportPaths=coverage/lcov.info
