fix: test sonarqube-10

--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -61,11 +61,9 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          SCANNER_ARGS="-Dsonar.host.url=${SONAR_HOST_URL} -Dsonar.login=${SONAR_TOKEN} -Dsonar.projectKey=calculator_app"
-          if [ -n "${SONAR_ORGANIZATION}" ]; then
-            SCANNER_ARGS="${SCANNER_ARGS} -Dsonar.organization=${SONAR_ORGANIZATION}"
-          fi
-          sonar-scanner ${SCANNER_ARGS}
+          sonar-scanner \
+            -Dsonar.host.url=${SONAR_HOST_URL} \
+            -Dsonar.login=${SONAR_TOKEN}
 
       - name: Wait for Quality Gate
         env:
